Fix checkboxes not being visible when using Chrome browser

--- a/wouso/resources/static/css/cpanel-style.css
+++ b/wouso/resources/static/css/cpanel-style.css
@@ -35,11 +35,6 @@ div.second {
     text-align: left;
 }
 
-input[type="checkbox"] {
-    width: 0;
-}
-
-
 .input-group.date .input-group-addon {
     width: 0;
 }
